--- a/components/FirstForm/FirstForm.module.scss
+++ b/components/FirstForm/FirstForm.module.scss
@@ -7,8 +7,8 @@
   border: 1px solid #d1d5db;
   border-radius: 0.5rem;
   color: #4b5563;
-  line-height: 1;
-  padding: 0.7rem;
+  // line-height: 1;
+  padding: 0.5rem;
   margin: 0.5rem 0;
   outline: none;
   position: relative;
@@ -31,6 +31,7 @@
   border-radius: 0.5rem;
   outline: none;
   color: #4b5563;
+  text-transform: uppercase;
   input[type='date']:invalid::-webkit-datetime-edit {
     color: #4b5563;
   }
